--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# My stuff
+src/main/resources/hidden.yaml
+output.csv
+.idea/encodings.xml
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
